--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "NPM package that helps get settings from BBEdit",
   "main": "bin/index.js",
   "bin": {
-    "options": "bin/index.js",
-    "options-cli": "bin/cli.js"
+    "bbedit-recover": "bin/cli.js",
+    "bbrec": "bin/cli.js"
   },
   "publishConfig": {
     "access": "public"
@@ -23,7 +23,9 @@
     "!win32"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -44,10 +46,14 @@
   "homepage": "https://github.com/codingChewie/bbedit-recovery#readme",
   "dependencies": {
     "chalk": "^4.1.1",
+    "clear": "^0.1.0",
     "commander": "^8.0.0",
+    "figlet": "^1.5.0",
     "fs-extra": "^10.0.0"
   },
   "devDependencies": {
+    "eslint": "^7.31.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2"
   }
 }
