--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "clear": "^0.1.0",
     "commander": "^8.0.0",
     "figlet": "^1.5.0",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "eslint": "^7.31.0",
