--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "Stationary"
   ],
   "author": "codingChewie",
-  "license": "ISC",
+  "license": "see license in LICENSE",
   "bugs": {
     "url": "https://github.com/codingChewie/bbedit-recovery/issues"
   },
